# fastapi_studying

./: .gitignore  README.md  dev.env  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py
app/bookings/: models.py
app/migrations/: env.py
app/migrations/versions/: 8c759521daca_initial_migration.py  a88355ebf693_added_three_new_tables_attempt_3.py  ddadfaa75c36_added_three_new_tables.py  f23979b9a329_added_three_new_tables_attempt_2.py
app/rooms/: models.py
app/users/: models.py
